fix : unnecessary scroll is visible in vault scanner | #720

--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,7 @@
 	z-index: 20;
 }
 
-.modal[modal-type="task-board-bug-reporter-modal"],
-.modal[modal-type="task-board-scan-vault-modal"] {
+.modal[modal-type="task-board-bug-reporter-modal"] {
 	width: auto;
 	min-height: auto;
 	max-width: 100vw;
@@ -3170,7 +3169,6 @@ li:hover .taskboard-hidden-property {
 	display: flex;
 	flex-direction: row;
 	height: 50vh;
-	width: 50vw;
 	width: 100%;
 	margin-block: 20px;
 	justify-content: space-between;
@@ -3180,7 +3178,6 @@ li:hover .taskboard-hidden-property {
 	height: 100%;
 	background-color: rgb(12 10 10);
 	color: rgb(109, 253, 140);
-	padding: 10px;
 	overflow-y: scroll;
 	min-height: inherit;
 	max-height: 65vh;
@@ -3201,7 +3198,6 @@ li:hover .taskboard-hidden-property {
 	position: sticky;
 	height: 100%;
 	background-color: transparent;
-	padding-left: 1em;
 	z-index: 10;
 	border: var(--border-width) solid var(--border-width) solid var(--interactive-accent);
 }
